Fix styling for disconnect error cards on mobile

--- a/src/components/Rooms/Rooms.scss
+++ b/src/components/Rooms/Rooms.scss
@@ -33,3 +33,52 @@
     width: 100vw;
   }
 }
+
+.game-disconnected {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+}
+
+.card-group {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 200% !important;
+  height: 100%;
+  padding: 0 10% 2%;
+  pointer-events: none;
+  position: absolute;
+  bottom: 0;
+  margin-left: 5%;
+
+  @media (min-width: 600px) {
+    width: 80%;
+  }
+
+  .first-card {
+    z-index: 2;
+    transform: rotate(-15deg) translateY(1.5em) translateX(0em);
+    font-size: 0.8em;
+
+    @media (max-width: 600px) {
+      .blank-space {
+        border: none;
+      }
+    }
+    @media (min-width: 600px) {
+      font-size: 1em;
+    }
+  }
+  .second-card {
+    z-index: 2;
+    transform: rotate(4deg) translateY(0.5em) translateX(-4em);
+    font-size: 0.8em;
+
+    @media (min-width: 600px) {
+      font-size: 1em;
+    }
+  }
+}
